fixed overflow caused by border in products page. fixed some hight styles in product page

--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -26,9 +26,8 @@
 .products_heading {
 	text-align: center;
 	position: relative;
-	margin: 40px 0px;
 	color: var(--primary-text-color);
-	margin: 0px 0 80px;
+	margin: 80px 0;
 	padding: 20px 0;
 }
 .products_heading h1 {
